--- a/app/res/layout/fragment_main.xml
+++ b/app/res/layout/fragment_main.xml
@@ -37,14 +37,18 @@
             android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:divider="@null"
+            android:dividerHeight="5dp" >
         </ListView>
 
         <ListView
             android:id="@+id/listView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:divider="@null"
+            android:dividerHeight="5dp" >
         </ListView>
     </LinearLayout>
 
