--- a/app/res/layout/listview_home_row_2.xml
+++ b/app/res/layout/listview_home_row_2.xml
@@ -6,17 +6,20 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_gravity="center"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:scaleType="centerCrop"
+        android:layout_margin="2dp"
         android:layout_weight="1"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/productNameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
         android:layout_weight="1"
         android:gravity="center"
         android:singleLine="true"
