--- a/app/res/layout/fragment_main.xml
+++ b/app/res/layout/fragment_main.xml
@@ -12,7 +12,7 @@
         android:visibility="gone" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/lblProductEndingOn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -20,7 +20,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txtProductEndingOn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
