--- a/app/res/layout/listview_product_row_1.xml
+++ b/app/res/layout/listview_product_row_1.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal" >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView5"
         android:layout_width="50dip"
         android:layout_height="50dip"
         android:src="@drawable/ic_launcher" />
@@ -19,7 +19,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/name_textView"
+            android:id="@+id/name_textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -28,17 +28,17 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <TextView
-            android:id="@+id/description_textView"
+            android:id="@+id/description_textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/name_textView"
+            android:layout_below="@+id/name_textView2"
             android:singleLine="true"
             android:text="Description"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
-            android:id="@+id/price_textView"
+            android:id="@+id/price_textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
