--- a/app/res/layout/fragment_product.xml
+++ b/app/res/layout/fragment_product.xml
@@ -129,6 +129,21 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" >
+            
+            <TextView
+                android:id="@+id/dimensionsTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Dimensions: "
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="wrap_content"
