--- a/app/res/layout/listview_orderedproduct.xml
+++ b/app/res/layout/listview_orderedproduct.xml
@@ -36,7 +36,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_alignParentLeft="true"
-	            android:layout_below="@+id/name_textView2"
+	            android:layout_below="@+id/name_textView3"
 	            android:singleLine="true"
 	            android:text="Description"
 	            android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/lblProductQuantity"
+            android:layout_toRightOf="@+id/lblProductQuantity2"
             android:paddingLeft="5dp"
             android:text="1" />
 
