--- a/app/res/layout/activity_main.xml
+++ b/app/res/layout/activity_main.xml
@@ -8,7 +8,12 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+        
+    </FrameLayout>
+
+    
 
     <ListView
         android:id="@+id/left_drawer"
@@ -19,4 +24,5 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:background="#111"/>
+    
 </android.support.v4.widget.DrawerLayout>
