--- a/app/res/menu/actionbar_main_menu.xml
+++ b/app/res/menu/actionbar_main_menu.xml
@@ -6,15 +6,15 @@
         android:orderInCategory="1000" 
         android:title="@string/btn_cart_desc"
         android:icon="@drawable/btn_cart"
-        android:onClick="cartButtonListner">
+       android:visible="false">
     </item>
     
     <!-- Search Button -->
     <item android:id="@+id/btn_search" 
         android:showAsAction="always" 
-        android:orderInCategory="500" 
-        android:title="@string/btn_search_desc" 
-        android:icon="@drawable/btn_search">
+        android:orderInCategory="600" 
+        android:title="@string/btn_search_desc"
+        android:icon="@drawable/btn_search" android:visible="false">
     </item>
 
      <!-- Search Bar Use only in SearchActivity.class -->
@@ -23,15 +23,15 @@
           android:orderInCategory="500" 
           android:icon="@drawable/btn_search"
           android:showAsAction="always"
-          android:visible="false"
-          android:actionViewClass="android.widget.SearchView"  />
+          android:actionViewClass="android.widget.SearchView"  android:visible="false"/>
     
     <!-- Category Submenu (Dynamicly Populated in Java) -->
     
-	    <item android:title="@string/btn_category_str"
+	    <item
+	        android:title="@string/btn_category_str"
 	        android:id="@+id/item_categories"
 	        android:showAsAction="always|withText" 
-	        android:orderInCategory="0" android:icon="@drawable/navigation_expand">
+	        android:orderInCategory="0" android:icon="@drawable/navigation_expand" android:visible="false">
 	        <menu android:id="@+id/subgroup_categories">
 	           <!-- Dynamicly Filled -->
 	        </menu>
@@ -39,10 +39,9 @@
 	    
 	    <item 
 	        android:id="@+id/btn_search_filter" 
-	        android:visible="false"
-	        android:orderInCategory="1000"
+	        android:orderInCategory="900"
 	        android:showAsAction="always" 
-	        android:icon="@drawable/btn_filter" android:title="@string/btn_filters">
+	        android:icon="@drawable/btn_filter" android:title="@string/btn_filters" android:visible="false">
 	    </item>
 </menu>
                   
