--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="light_gray">#D3D3D3</color>
     <color name="white">#FFFFFF</color>
     <color name="darker_white">#F6F6F6</color>
+    <color name="black">#000000</color>
     
 </resources>
