--- a/app/res/layout/fragment_myorders_details.xml
+++ b/app/res/layout/fragment_myorders_details.xml
@@ -24,7 +24,6 @@
 
     <LinearLayout
         android:id="@+id/odMainLayout"
-        
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
@@ -39,19 +38,9 @@
 	        android:textStyle="bold|italic"
 	        android:padding="10dp"/>    
         
-        <TableLayout
-		    android:gravity="center"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:stretchColumns="*" >
-			<TableRow
-		        android:id="@+id/tableRow2"
-		        android:layout_weight="1"
-		        android:gravity="center"
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content" >
+       
 				<LinearLayout
-	                android:layout_width="wrap_content"
+	                android:layout_width="match_parent"
 	                android:layout_height="wrap_content"
 	                android:layout_marginBottom="4dp"
 	                android:layout_marginLeft="6dp"
@@ -68,25 +57,6 @@
 	
 	            </LinearLayout>
 	
-	            <LinearLayout
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_marginBottom="4dp"
-	                android:layout_marginLeft="6dp"
-	                android:layout_marginRight="6dp"
-	                android:layout_marginTop="4dp"
-	                android:background="@drawable/bg_card"
-	                android:orientation="vertical" >
-	
-	                <TextView
-	                    android:id="@+id/textView2"
-	                    android:layout_width="wrap_content"
-	                    android:layout_height="wrap_content"
-	                    android:text="TextView" />
-	
-	            </LinearLayout>
-    		</TableRow>
-		</TableLayout>
        <TextView
         android:id="@+id/items_tv"
         android:layout_width="match_parent"
