--- a/app/res/layout/fragment_myorders_details.xml
+++ b/app/res/layout/fragment_myorders_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent" >
 
     <ImageView
-        android:visibility="gone"
+        
         android:id="@+id/odPlaceHolderImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,6 +23,7 @@
             android:layout_centerInParent="true" />
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/odMainLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -50,10 +51,61 @@
 	                android:orientation="vertical" >
 	
 	                <TextView
-	                    android:id="@+id/textView1"
+	                    android:id="@+id/tvOrderDetailsDate"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:text="TextView" />
+	                    android:text="@string/texbox_orderdate" />
+	                <TextView
+	                    android:id="@+id/tvOrderTotal"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_ordertotal" />
+	                <TextView
+	                    android:id="@+id/tvOrderShipTo:"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_ordershipto" />
+	                <TextView
+	                    android:id="@+id/tvOrderAddress"
+	                    android:layout_marginLeft="5dp"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_orderaddress" />
+	              <!--   <TextView
+	                    android:id="@+id/tvOrderTracking"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_ordertrackingtitle" />
+	                 <TextView
+	                    android:id="@+id/tvOrderTrackingNUm"
+	                    android:layout_marginLeft="5dp"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_ordertrackingnum"  /> -->
+	                <TextView
+	                    android:id="@+id/tvOrderPaymentTitle"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_orderpaymenttitle" />
+	                <TextView
+	                    android:id="@+id/tvOrderCCNum"
+	                    android:layout_width="wrap_content"
+	                    android:layout_marginLeft="5dp"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_orderaddress" />
+	               <!--  <TextView
+	                    android:id="@+id/tvOrderBillingTitle"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:text="@string/textbox_orderbillingaddrtitle" />
+	                <TextView
+	                    android:id="@+id/tvOrderBillingAddr"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginLeft="5dp"
+	                    android:text="@string/textbox_orderaddress" />
+	               --> 
+	                
 	
 	            </LinearLayout>
 	
